[package]
name = "aqueduct-client-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
dotenv = "0.15.0"
regex = "1.12.2"
rustls = "0.23.32"
rustls-native-certs = "0.8.1"
rustyline = "17.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "net", "rt", "rt-multi-thread", "io-util"] }
tokio-rustls = "0.26.3"
tokio-util = { version = "0.7.17", features = ["join-map", "rt"] }
