[package]
name = "aqueduct-client-rs"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.44"
clap = { version = "4.5.61", features = ["derive"] }
dotenv = "0.15.0"
hmac = "0.13.0"
log = "0.4.29"
regex = "1.12.3"
rustls = "0.23.32"
rustls-native-certs = "0.8.3"
rustyline = "17.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tokio = { version = "1.51.0", features = ["macros", "net", "rt", "rt-multi-thread", "io-util", "time"] }
tokio-rustls = "0.26.4"
tokio-util = { version = "0.7.18", features = ["join-map", "rt"] }

[target.'cfg(target_os = "macos")'.dependencies]
oslog = "0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
syslog = "7.0.0"
